Some visual improvements -Style: Maked the style of the account security pages more consistence. -Style: Added a breakpoint through CSS to wrap the security navbar. -Fix: Fixed an exception wherethe error message when IPApiGeolocator failed isn't available.

--- a/SchulCloud.Web/SchulCloud.Web/wwwroot/css/SchulCloud.Web.bundle.scp.css
+++ b/SchulCloud.Web/SchulCloud.Web/wwwroot/css/SchulCloud.Web.bundle.scp.css
@@ -1,3 +1,9 @@
+/* _content/SchulCloud.Web/Components/Layouts/PageLayouts/AccountSecurityLayout.razor.rz.scp.css */
+@media (max-width: 650px) {
+    [b-pejc76rrhu].securityNavbar div[role='group'] {
+        flex-wrap: wrap;
+    }
+}
 /* _content/SchulCloud.Web/Components/Pages/Account/Security/LoginAttemptDetails.razor.rz.scp.css */
 div.embeddedMap[b-m0i0ftvv9j] {
     height: 500px;
